--- a/Portugues inicion.html
+++ b/Portugues inicion.html
@@ -124,6 +124,128 @@ img {
 
 
 
+*{
+  margin: 0;
+  padding: 0;
+  text-decoration: none;
+  font-family: "Open Sans",sans-serif;
+}
+
+header{
+  height: 65px;
+  background: #294674;
+}
+
+.inner-width{
+  max-width: 1000px;
+  padding: 0 10px;
+  margin: auto;
+}
+
+.logo{
+  float: left;
+  padding: 0px 0;
+}
+
+.logo img{
+  height: 100px;
+}
+
+.navigation-menu{
+  float: right;
+  display: flex;
+  align-items: center;
+  min-height: 100px;
+}
+
+.navigation-menu a{
+  margin-left: 10px;
+  color: rgb(253, 249, 249);
+  text-transform: uppercase;
+  font-size: 14px;
+  padding: 12px 20px;
+  border-radius: 4px;
+  transition: .3s linear;
+}
+
+.navigation-menu a:hover{
+  background: #294674;
+  color: rgb(233, 236, 240);
+  transform: scale(1.1);
+}
+
+.navigation-menu i{
+  margin-right: 8px;
+  font-size: 16px;
+}
+
+.home{
+  color: #034fc2;
+}
+
+.about{
+  color: #79af15;
+}
+
+.works{
+  color: #0f67f7;
+}
+
+.team{
+  color: #09a7ad;
+}
+
+.contact{
+  color: #d6d9e9;
+}
+
+.menu-toggle-btn{
+  float: right;
+  height: 90px;
+  line-height: 90px !important;
+  color: rgb(247, 248, 253);
+  font-size: 26px;
+  display: none !important;
+  cursor: pointer;
+}
+
+
+@media screen and (max-width:700px) {
+  .menu-toggle-btn{
+    display: block !important;
+  }
+
+  .navigation-menu{
+    position: fixed;
+    width: 100%;
+    max-width: 400px;
+    background: #172b4d;
+    top: 90px;
+    right: 0;
+    display: none;
+    padding: 20px 40px;
+    box-sizing: border-box;
+  }
+
+  .navigation-menu::before{
+    content: "";
+    border-left: 10px solid transparent;
+    border-right: 10px solid transparent;
+    border-bottom: 10px solid #172b4d;
+    position: absolute;
+    top: -10px;
+    right: 10px;
+  }
+
+  .navigation-menu a{
+    display: block;
+    margin: 10px 0;
+  }
+
+  .navigation-menu.active{
+    display: block;
+  }
+}
 
 
 
@@ -159,7 +281,7 @@ img {
 
     <center><h2 style="font-family: 'Barlow', sans-serif;">Basico</h2></center> <br><br>
 
-    <center><section style="background-color: #ffffff;" class="photos circular"><br></center>
+    <section style="background-color: #ffffff;" class="photos circular"><br>
        
 
 
